Update code Spring-boot之前的jar启动改为war启动模式。 增加登陆成功后给客户端传递token功能

--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -7,7 +7,7 @@
     <groupId>com.funeral</groupId>
     <artifactId>upload</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <packaging>jar</packaging>
+    <packaging>war</packaging>
 
     <name>upload Maven Webapp</name>
     <!-- FIXME change it to the project's website -->
@@ -46,6 +46,12 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-starter-tomcat:2.1.0.RELEASE</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
         <dependency>
@@ -95,7 +101,7 @@
     </dependencies>
 
     <build>
-        <finalName>upload</finalName>
+        <finalName>upload-service</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
