--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,2 +1,6 @@
 internal_server_error=This is internal server error. Please contact Administrator!
-server.port=9000
+#server.port=9000
+spring.mvc.static-path-pattern=/files/**
+cors.allowOrigin=http://tomcat.funeralobjects.cn
+#3M\u5927\u5C0F
+upload.maxSize=3145728
