Optimize code 优化了import 去掉了spring-security中对于"/files"拦截配置 优化了Token传输配置

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,6 +1,5 @@
 internal_server_error=This is internal server error. Please contact Administrator!
-#server.port=9000
-spring.mvc.static-path-pattern=/files/**
 cors.allowOrigin=http://tomcat.funeralobjects.cn
+#cors.allowOrigin=http://localhost:8080
 #3M\u5927\u5C0F
-upload.maxSize=3145728
+upload.maxSize=10485760
